# ill_mirror-takin2-paths

./: .gitignore  CITATION.bib  CITATION.cff  CMakeLists.txt  CMakeLists_externals.txt  LICENSE  README.md  paths.code-workspace  release_build.sh  taspaths.sh
cmake/: FindOVD.cmake  FindQCP.cmake
res/: frag.shader  instrument.paths  instrument.taspaths  limits.taspaths  mira.taspaths  vertex.shader
script_tests/: workflow.py  workflow_fixed_ki.py
scripting/: taspaths.i
setup/: debug_build.sh  dev_doc  doc  get_3rdparty_licenses.sh  get_libs.sh  rebuild_libs.sh  release_build.sh  set_version.sh
setup/deb/: mk.sh  taspaths.desktop
setup/mingw/: mk.sh
setup/osx/: Info.plist  hull.plist  lines.plist  mk.sh  poly.plist
src/: Geometry.cpp  Geometry.h  Instrument.cpp  Instrument.h  PathsDlg.cpp  PathsRenderer.cpp  PathsRenderer.h  PathsTool.cpp  globals.h  types.h
src/core/: Axis.cpp  Axis.h  Geometry.cpp  Geometry.h  Instrument.cpp  Instrument.h  InstrumentSpace.cpp  InstrumentSpace.h  PathsBuilder.cpp  PathsBuilder.h  PathsBuilder_mesh.cpp  PathsExporter.cpp  PathsExporter.h  PathsMeshBuilder.cpp  TasCalc.cpp  TasCalc.h  TasCalculator.cpp  TasCalculator.h  mingw_hacks.h  ptree_algos.h  types.h
src/gui/: About.cpp  About.h  CamProperties.cpp  CamProperties.h  ConfigSpace.cpp  ConfigSpace.h  GeoBrowser.cpp  GeoBrowser.h  InstrumentStatus.h  Licenses.cpp  Licenses.h  PathProperties.cpp  PathProperties.h  PathsRenderer.cpp  PathsRenderer.h  PathsTool.cpp  PathsTool.h  Properties.cpp  Properties.h  Recent.cpp  Recent.h  Resources.cpp  Resources.h  Settings.cpp  Settings.h  TASProperties.cpp  TASProperties.h  TextureBrowser.cpp  TextureBrowser.h  XtalConfigSpace.cpp  XtalConfigSpace.h  XtalProperties.cpp  XtalProperties.h  main.cpp  mingw_hacks.h  qcp_wrapper.h  settings_common.h  settings_variables.cpp  settings_variables.h
src/gui/common/: Recent.cpp  Resources.h
src/gui/dialogs/: About.cpp  ConfigSpace.cpp  ConfigSpace.h  GeoBrowser.cpp  Licenses.cpp  Licenses.h  Settings.h  TextureBrowser.cpp  XtalConfigSpace.cpp  XtalConfigSpace.h
src/gui/dock/: CamProperties.cpp  CamProperties.h  CoordProperties.cpp  CoordProperties.h  PathProperties.cpp  PathProperties.h  TASProperties.cpp  TASProperties.h  XtalProperties.cpp  XtalProperties.h
src/gui/renderer/: Camera.h  PathsRenderer.cpp  PathsRenderer.h
src/libs/: circular_iterator.h  containers.h  graphs.h  hashes.h  helpers.h  hull.h  img.h  lines.h  pair.h  proc.cpp  proc.h  ptree.h  span.h  trapezoid.h  trees.h  voronoi.h  voronoi_lines.h
src/tests/: hull.cpp
src/tools/: Settings.cpp  Settings.h  about.cpp  about.h  hull.cpp  hull.h  hull_main.cpp  info.cpp  info.h  lines.cpp  lines.h  lines_main.cpp  poly.cpp  poly.h  poly_main.cpp  settings.cpp  settings.h  settings_common.h  settings_variables.cpp  settings_variables.h  vertex.cpp  vertex.h
tests/: CMakeLists.txt  configspace.cpp  contour.cpp  convex.cpp  dijk.cpp  graphs.cpp  hull.cpp  hull.h  kdtree.cpp  lines.cpp  lines.h  rtree.cpp  screenshot_video.sh  test.paths  test.py  test_trapezoid.cpp  trapezoid.cpp  voro.xml  voronoi_performance.cpp  workflow.py  workflow_fixed_ki.py
texts/: formulas.tex  project.tex  thesis.tex
thesis/: Makefile  thesis.bib
unittests/: CMakeLists.txt  dijkstra.cpp  index_trees.cpp  intersect_circle.cpp  intersect_circle_poly.cpp  intersect_line.cpp  voronoi.cpp
